--- a/wheelview/build.gradle
+++ b/wheelview/build.gradle
@@ -15,10 +15,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
+    /*compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
+    }*/
 
 }
 
@@ -27,3 +27,18 @@ dependencies {
 }
 
 //apply from: 'http://git.oschina.net/venshine/gradle-bintray-upload/raw/master/bintray.gradle'
+
+//自定义生成 jar 包
+//task to delete the old jar
+task deleteOldJar(type: Delete) {
+    delete 'release/WheelViewJar_V1.3.4.jar'
+}
+//task to export contents as jar
+task makeJar(type: Copy) {
+    delete 'release/WheelViewJar_V1.3.4.jar' //删除之前的旧jar包
+    from('build/intermediates/packaged-classes/release/') //从这个目录下取出默认jar包
+    into('release/') //将jar包输出到指定目录下
+    include('classes.jar')
+    rename('classes.jar', 'WheelViewJar_V1.3.4.jar') //自定义jar包的名字
+}
+makeJar.dependsOn(build)
